# tutorials

Genesis/: README.md
omniverse/: README.md
omniverse/Galaxea R1/: README.md
omniverse/Galaxea R1/manipulator/: LICENSE  README.md  whitepaper.md
omniverse/Galaxea R1/manipulator/Galaxea_R1_Training/: export_model.py  main.py  train_cli.py
omniverse/Galaxea R1/manipulator/ros_bridge/: policy_inference_node.py
omniverse/Galaxea R1/navigation/: README.md  galaxea_nav.service  requirements.txt  whitepaper.md
omniverse/Galaxea R1/navigation/ros_bridge/: package.xml
omniverse/Galaxea R1/navigation/ros_bridge/launch/: bridge.launch.py
omniverse/Galaxea R1/navigation/ros_bridge/ros_bridge/: bridge_node.py
omniverse/Issac SIM/: README.md
omniverse/Unitree Go1/: Go1_Training_Guide.md  README.md  train.py
omniverse/Unitree Go1/adaptation/: adapt_policy.py
omniverse/Unitree Go1/cfg/: train_go1_sensor_advanced.yaml
omniverse/Unitree Go1/curriculum/: com_shift_curriculum.py
omniverse/Unitree Go1/goal/: goal_reward.py
omniverse/Unitree Go1/inference/: inference_runner.py
omniverse/Unitree Go1/rl_module/: action_penalty.py  energy_reward.py  policy_network.py
omniverse/Unitree Go1/ros_interface/: go1_driver_node.py
omniverse/Unitree Go1/scene/: flat.yaml  scene_loader.py  scene_wrapper.py  terrain_flat.yaml  terrain_gap.yaml  terrain_slope.yaml  terrain_soft.yaml  terrain_steps.yaml  terrain_uneven.yaml
omniverse/Unitree Go1/utils/: obs_normalizer.py
omniverse/Unitree Go1/visual/: com_visualizer.py
(+62 files in other folders)
